project split in multi-modules